--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!---<!DOCTYPE html>
 <HTML lang="en">
     <HEAD>
         <TITLE>HBNB</TITLE>
@@ -7,3 +7,11 @@
         <H1>Number: 89</H1>
     </BODY>
 </HTML>
+-->
+<!doctype html>
+<title>Hello from Flask</title>
+{% if n %}
+  <h1>Number {{ n }}!</h1>
+{% else %}
+  <h1>404</h1>
+{% endif %}
